fix margin on small screens for blog title of blog card; fix layout for projects main page

--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -25,7 +25,7 @@ Main blog page
   margin: 3em;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: left;
   transform: scale(1);
   transition: transform 250ms;
 }
@@ -79,6 +79,10 @@ Main blog page
   .blog-card-img {
     width: 100%;
     height: calc(100vw * 0.4);
+  }
+
+  .blog-card-title {
+    margin-top: 1em;
   }
 }
 
